--- a/style.css
+++ b/style.css
@@ -55,8 +55,9 @@ footer p a {
     color: black;
     text-decoration: none;
 }
-@media (max-width 600px ) {
+@media (max-width: 444px ) {
     section {
-        width: 50%;
+        width: 80%;
     }
+
 }
