--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ header h1 {
     margin-top: 20px;
 }
 section {
-    background-color: white;
+    background-color: rgba(245, 153, 111, 0.37);
     width: 500px;
     
     padding: 15px;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.575);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.637);
     margin: auto;
     border-radius: 12px;
     margin-top: 30px;
